<resources>
    <string name="app_name">QuietPlaces</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Map</string>
    <string name="title_section3">History</string>
    <string name="title_section_about">"Help / About"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Welcome to QuietPlaces</string>
    <string name="current_ringer_status">Current Ringer Status</string>
    <string name="authors">By: Preston Landers and Abe Arredondo</string>
    <string name="authors2">Mobile Computing 2014 @ UT Austin</string>
    <string name="about_version">"Version: "</string>
    <string name="about_authors_1">Design: Abe Arredondo and Preston Landers</string>
    <string name="about_authors_2">Programming: Preston Landers</string>
    <string name="about_thanks">Thanks to: Dr. Christine Julien</string>
    <string name="about_code_link">&lt;A HREF="https://bitbucket.org/planders/quietplaces">Project Home Page&lt;/A></string>
    <string name="about_online_help_link">&lt;A HREF="https://sites.google.com/a/utexas.edu/auto-ringer1/cover-page/k-user-interface">Help on the Web&lt;/A></string>
    <string name="about_store_link">&lt;A HREF="https://bitbucket.org/planders/quietplaces">Google Play Store Page&lt;/A></string>
    <string name="about_blurb">
        This is a term project for the 2014 Mobile Computing software engineering
        graduate course at the University of Texas at Austin.
        \n\n
        Warning: this is EXPERIMENTAL BETA QUALITY software. Use at your own risk.
    </string>
    <string name="help_overview_title">Overview</string>
    <string name="help_overview">
        This app controls your phone\'s ringer automatically based on "quiet places" you define
        either manually or through automatic discovery of certain place categories such as movie theaters or
        hospitals. It is currently in development and not yet finished (beta quality). Please do not use
        this app if having your ringer inadvertently silenced would be a problem for you.
    </string>
    <string name="help_usage_title">Using the App</string>
    <string name="help_usage">
        Quiet Places can be placed on the map manually or automatically. A Quiet Place is a geographic point combined with a radius.
        If you enter this area the ringer will be silenced automatically, and if you leave it will be
        re-enabled - unless you are still within another Quiet Place.\n\n
        To create a Quiet Place go to the Map tab then press the green Add button. Now touch a spot on the map
        and the place will appear.  To move the place hold down the marker and then drag it. To resize the quiet
        place tap the marker to select it then press the Grow or Shrink buttons in the action bar. To remove
        the quiet place select it and then tap the trash can icon.\n\n
        To have the app create quiet places automatically, go to Settings and select the place categories you wish
        to silence automatically. If you edit an automatic Quiet Place, such as move it or change its size,
        it will be saved as a permanent place until you delete it.
    </string>
    <string name="help_tools_title">Development</string>
    <string name="help_tools">This app uses the &lt;A HREF="https://developers.google.com/maps/">Google Maps 2.0 SDK&lt;/A>
        and the &lt;A HREF="https://developers.google.com/places/documentation/">Google Places API&lt;/A>,
        along with &lt;A HREF="https://developer.android.com/training/location/geofencing.html">Location Services geofences&lt;/A>.
        It was developed with &lt;A HREF="http://www.jetbrains.com/idea/">JetBrains IntelliJ IDEA 13&lt;/A>.
    </string>
    <string name="help_conclusion_title">For More Info</string>
    <string name="help_conclusion">For more information please see the
        &lt;A HREF="https://bitbucket.org/planders/quietplaces">
        project source code home page&lt;/A>, or the Google Play store page (coming soon).
        \n\n
        This application is free software and is covered by the &lt;A HREF="http://www.apache.org/licenses/LICENSE-2.0.txt">
        Apache Software License 2.0&lt;/A>
    </string>
    <string name="settings_activity_name">Settings</string>
    <string name="add_quiet_place_button">Add</string>
    <string name="ringer_switch">Ringer Enabled</string>
    <string name="add_button_description">Add Quiet Place</string>
    <string name="clear_history_button">Clear History</string>
    <string name="control_ringer_switch">Enforce QuietPlaces</string>
    <string name="control_ringer_label">Let this app control the ringer?</string>
    <string name="add_geofences_result_success">
        Add Geofences: Success GeofenceRequestIds=%1$s
    </string>
    <string name="add_geofences_result_failure">
        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="add_geofences_already_requested_error">
        Can\'t add geofences, previous request hasn\'t finished.
    </string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_input_error_missing">Missing value</string>
    <string name="geofence_input_error_latitude_invalid">
        Invalid latitude(s). Must be in the range -90 to 90 degrees
    </string>
    <string name="geofence_input_error_longitude_invalid">
        Invalid longitude(s). Must be in the range -180 to 180 degrees
    </string>
    <string name="geofence_input_error_radius_invalid">
        Invalid radius(s). Must be 1 meter or greater.
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_error_detail">
        Geofence transition error, code %1$d message %2$s.
    </string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error. Invalid type %1$d in geofences %2$s
    </string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="geofence_transition_notification_title">
        %1$s quiet place %2$s
    </string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="latitude_error_message">
        Latitude should be in the range -90 to 90 degrees
    </string>
    <string name="longitude_error_message">
        Longitude should be in the range -180 to 180 degrees
    </string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="radius_error_message">Radius must be greater than or equal to 0</string>
    <string name="register_geofence">Register geofence</string>
    <string name="remove_geofences_id_failure">
        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s
    </string>
    <string name="remove_geofences_already_requested_error">
        Can\'t remove geofences, previous request hasn\'t finished.
    </string>
    <string name="remove_geofences_id_success">
        Removing geofences by request ids succeeded: request ids: %1$s
    </string>
    <string name="remove_geofences_intent_failure">
        Removing all geofences failed: error code %1$d
    </string>
    <string name="remove_geofences_intent_success">
        Removing all geofences succeeded.
    </string>
    <string name="transition_entered">entered</string>
    <string name="transition_exited">exited</string>
    <string name="transition_unknown">unknown</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="unregister_geofence">Remove geofences</string>
    <string name="unregister_geofence1">Remove geofence 1</string>
    <string name="unregister_geofence2">Remove geofence 2</string>
    <string name="lat_lng_pattern">* ###.00000000;* -###.00000000</string>
    <string name="radius_pattern">* #.0000</string>
    <string name="size_label">"Radius: "</string>
    <string name="position_label">Pos:</string>
    <string name="shrink_place">Smaller</string>
    <string name="grow_place">Larger</string>
    <string name="delete_place">Delete</string>
    <string name="recenter_place">Center</string>
    <string name="edit_place">Edit</string>
    <string name="resize_btns_label">Resize</string>
    <string name="icon">Icon</string>
    <string name="event_type_place_add">Added</string>
    <string name="event_type_place_remove">Removed</string>
    <string name="event_type_place_update">Updated</string>
    <string name="event_type_place_enter">Entered</string>
    <string name="event_type_place_exit">Exited</string>
    <string name="event_type_database_loaded">Loaded</string>
    <string name="event_type_history_cleared">History cleared</string>
    <string name="no_events_yet">No events have been registered yet.</string>
    <string name="edit_placename_dialog_title">Quiet Place (%1$d)</string>
    <string name="edit_placename_dialog_msg">What is the name of this Quiet Place?</string>
    <string name="follow_user_checkbox">Follow</string>
    <string name="pref_category_device_title">Device Settings</string>
    <string name="pref_category_map_title">Map Settings</string>
    <string name="pref_use_location">Allow Location Updates</string>
    <string name="pref_use_location_summary">If this is checked the app will periodically refresh your location to check for nearby quiet places.</string>
    <string name="pref_use_vibrate">Vibrate</string>
    <string name="pref_use_vibrate_summary">When checked the device will be set to vibrate instead of silent.</string>
    <string name="pref_map_type">Map Type</string>
    <string name="pref_map_type_summary">Select the type of map to be displayed.</string>
    <string name="pref_map_type_default">MAP_TYPE_NORMAL</string>
    <string name="pref_category_dining_entertainment"><![CDATA[Dining & Entertainment]]></string>
    <string name="pref_cat_movie_theater">Movie Theaters</string>
    <string name="pref_cat_restaurant">Restaurants</string>
    <string name="pref_cat_art"><![CDATA[Museums & Art Galleries]]></string>
    <string name="pref_cat_cafe">Cafés</string>
    <string name="pref_cat_gym">Gyms</string>
    <string name="pref_cat_funeral"><![CDATA[Funeral Homes & Cemeteries]]></string>
    <string name="pref_cat_places_of_worship">Places of Worship</string>
    <string name="pref_cat_places_of_worship_summary">Churches, Mosques, Synagogues, and Hindu Temples.</string>
    <string name="pref_category_religious"><![CDATA[Religious & Funeral]]></string>
    <string name="pref_cat_hospital">Hospitals</string>
    <string name="pref_category_health"><![CDATA[Medical & Health]]></string>
    <string name="pref_cat_doctor"><![CDATA[Doctor & Dentist Offices]]></string>
    <string name="pref_cat_pharmacy"><![CDATA[Pharmacy, Veterinary & Wellness]]></string>
    <string name="pref_category_school"><![CDATA[Schools & Libraries]]></string>
    <string name="pref_cat_school">Schools</string>
    <string name="pref_cat_university">Universities</string>
    <string name="pref_cat_library">Libraries</string>
</resources>