<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/pref_category_device_title"
            android:key="pref_category_location">
        <CheckBoxPreference
                android:key="pref_use_location"
                android:title="@string/pref_use_location"
                android:summary="@string/pref_use_location_summary"
                android:defaultValue="true"/>
        <CheckBoxPreference
                android:key="pref_use_vibrate"
                android:title="@string/pref_use_vibrate"
                android:summary="@string/pref_use_vibrate_summary"
                android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_category_map_title"
            android:key="pref_category_map">
        <ListPreference
                android:key="pref_map_type"
                android:title="@string/pref_map_type"
                android:dialogTitle="@string/pref_map_type"
                android:entries="@array/pref_map_type_entries"
                android:entryValues="@array/pref_map_type_values"
                android:defaultValue="@string/pref_map_type_default" />
    </PreferenceCategory>
</PreferenceScreen>