<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="edu.utexas.quietplaces.fragments.AboutFragment">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:paddingBottom="10dp">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/app_name"
                        android:id="@+id/about_title_tv"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/about_version"
                        android:id="@+id/about_version_tv"
                        android:layout_below="@+id/about_title_tv"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/about_authors_1"
                        android:layout_alignParentBottom="false"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="18dp"
                        android:singleLine="false"
                        android:text="@string/about_authors_1"
                        android:layout_alignParentLeft="false"
                        android:layout_below="@+id/about_logo_iv"
                        android:layout_marginTop="10dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/about_authors_2"
                        android:layout_alignParentBottom="false"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="18dp"
                        android:id="@+id/about_authors_2"
                        android:layout_below="@+id/about_authors_1"
                        android:singleLine="false"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/about_thanks"
                        android:layout_alignParentBottom="false"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/about_thanks"
                        android:layout_below="@+id/about_authors_2"
                        android:singleLine="false"/>

                <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:id="@+id/about_logo_iv"
                        android:src="@drawable/ic_launcher_web"
                        android:contentDescription="@string/about_logo_desc"
                        android:layout_alignParentBottom="false"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="false"
                        android:layout_alignTop="@+id/about_title_tv"
                        android:focusableInTouchMode="false"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/about_code_link"
                        android:id="@+id/about_code_link"
                        android:layout_below="@+id/about_thanks"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:layout_centerHorizontal="true"
                        android:linksClickable="false"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/about_online_help_link"
                        android:id="@+id/help_link"
                        android:layout_below="@+id/about_code_link"
                        android:layout_marginBottom="15dp"
                        android:layout_centerHorizontal="true"
                        android:linksClickable="false"/>

                <TextView
                        android:id="@+id/about_blurb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_blurb"
                        android:layout_alignParentTop="false"
                        android:layout_alignParentLeft="false"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/help_link"
                        android:singleLine="false"
                        />

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/about_icon_iv"
                        android:src="@drawable/ic_menu_info_details"
                        android:layout_alignTop="@+id/about_title_tv"
                        android:contentDescription="@string/about_icon_desc"/>

            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="10dp">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/about_help_icon"
                        android:src="@drawable/ic_menu_help"
                        android:contentDescription="@string/about_help_icon_desc"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/about_help_title"
                        android:id="@+id/about_help_title"
                        android:layout_toRightOf="@+id/about_help_icon"
                        android:layout_alignBottom="@+id/about_help_icon"
                        android:layout_marginBottom="3dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/help_overview_title"
                        android:id="@+id/help_overview_title_tv"
                        android:layout_below="@+id/about_help_title"
                        android:layout_marginTop="10dp"/>

                <TextView
                        android:id="@+id/help_overview_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_overview"
                        android:layout_alignParentTop="false"
                        android:layout_alignParentLeft="false"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/help_overview_title_tv"
                        android:singleLine="false"
                        android:layout_marginTop="5dp"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/help_usage_title"
                        android:id="@+id/help_usage_title_tv"
                        android:layout_below="@+id/help_overview_tv"
                        android:layout_marginTop="10dp"/>

                <TextView
                        android:id="@+id/help_usage_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_usage"
                        android:layout_alignParentTop="false"
                        android:layout_alignParentLeft="false"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/help_usage_title_tv"
                        android:singleLine="false"
                        android:layout_marginTop="5dp"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/help_tools_title"
                        android:id="@+id/help_tools_title_tv"
                        android:layout_below="@+id/help_usage_tv"
                        android:layout_marginTop="10dp"/>

                <TextView
                        android:id="@+id/help_tools_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_tools"
                        android:layout_alignParentTop="false"
                        android:layout_alignParentLeft="false"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/help_tools_title_tv"
                        android:singleLine="false"
                        android:layout_marginTop="5dp"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/help_conclusion_title"
                        android:id="@+id/help_conclusion_title_tv"
                        android:layout_below="@+id/help_tools_tv"
                        android:layout_marginTop="10dp"/>

                <TextView
                        android:id="@+id/help_conclusion_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_conclusion"
                        android:layout_alignParentTop="false"
                        android:layout_alignParentLeft="false"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/help_conclusion_title_tv"
                        android:singleLine="false"
                        android:layout_marginTop="5dp"
                        />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
